--- a/CSS/positions/static.html
+++ b/CSS/positions/static.html
@@ -71,10 +71,14 @@ They are not affected by the top, right, bottom, or left properties. -->
       }
 
       .child-2 {
-        /* position: absolute; */
-        /* left: 50%; */
-        margin-left: 50%;
-        margin-top: 60%;
+        position: absolute;
+        left: 20rem;
+        margin-top: 20rem;
+      }
+      .child-3{
+        position: absolute;
+        left: 20rem;
+        top: 50rem;
       }
     </style>
   </head>
