--- a/Projects/Project_09/index.html
+++ b/Projects/Project_09/index.html
@@ -63,19 +63,21 @@
             </div>
         </div>
     </section>
-    <section class="contact-Section">
+    <div class="grid-containerss">
         <div class="contact">
             <h3>Contact Me</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, quos.</p>
             <p>ompaltest@gmail.com</p>
             <p>Phone -: 94xxxxxxx1</p>
-        </div>
-        <div class="about">
+        </div> 
+         <div class="about">
             <h3>About Me</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, quos.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quae eius repellendus culpa maxime a?</p>
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
+    </div>
+    <section class="contact-Section">
     </section>
 <section class="footer">
     <p>© 2025 Ompal Yadav. All rights reserved.</p>
